kubernetes/alephium/alephium-explorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-backend
  name: explorer-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-backend
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
      labels:
        app: explorer-backend
      name: explorer-backend
    spec:
      containers:
      - name: explorer-backend
        image: alephium/explorer-backend:1.6.2
---
apiVersion: v1
kind: Service
metadata:
  name: explorer-backend
spec:
  selector:
    app: explorer-backend
  ports:
    - name: explorer-backend
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: explorer-frontend
  name: explorer-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-frontend
  template:
    metadata:
      labels:
        app: explorer-frontend
      name: explorer-frontend
    spec:
      containers:
      - name: explorer-frontend
        image: liuhongchao/explorer:f1345664c22d9b3af5d3740938392357aff14eeb
---
apiVersion: v1
kind: Service
metadata:
  name: explorer-frontend
spec:
  selector:
    app: explorer-frontend
  ports:
    - name: explorer-frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          volumeMounts:
            - name: explorer-postgres-data
              mountPath: /data/
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: explorer-postgres-data
          persistentVolumeClaim:
            claimName: alephium-explorer-postgres-pvc-claim
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
