kubernetes/alephium/alephium-miner.yaml
## Set the external IP address from the `alephium-miner` to
## `alephium.network.external-address` for the alephium full node.
## For example:
## alephium.network.external-address = "34.79.193.48:9973"
apiVersion: v1
kind: Service
metadata:
  name: alephium-miner
spec:
  selector:
    app: alephium
  ports:
    - name: p2p
      protocol: TCP
      port: 9973
      targetPort: 9973
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alephium-cpu-miner
  name: alephium-cpu-miner 
spec:
  replicas: 0
  selector:
    matchLabels:
      app: alephium-cpu-miner
  template:
    metadata:
      labels:
        app: alephium-cpu-miner
      name: alephium-cpu-miner
    spec:
      containers:
      - command: ['/cpu-miner', 'alephium']
        image: alephium/dev-cpu-miner:latest
        imagePullPolicy: Always
        name: alephium-cpu-miner
