kubernetes/alephium/alephium-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alephium
  name: alephium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alephium
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "12973"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
      labels:
        app: alephium
      name: alephium
    spec:
      containers:
#      - command: ['sleep', 'infinity']
      - name: alephium
        image: alephium/alephium:v1.3.2
        imagePullPolicy: Always
        ports:
          - containerPort: 12973
        volumeMounts:
          - mountPath: "/alephium-home/.alephium"
            name: alephium-home
            subPath: .alephium
          - mountPath: "/alephium-home/.alephium/user.conf"
            name: alephium-configs
            subPath: user.conf
          - mountPath: "/alephium-home/file-uploads"
            name: file-uploads
            subPath: file-uploads
      securityContext:
        fsGroup: 65534  # user id of the `nobody` user
      volumes:
        - name: alephium-home
          persistentVolumeClaim:
            claimName: alephium-blockchain-pvc-claim
        - name: alephium-configs
          configMap:
            name: alephium-configs
        - name: file-uploads  # required by http post
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: alephium
spec:
  selector:
    app: alephium
  ports:
    - name: http
      protocol: TCP
      port: 12973
      targetPort: 12973
    - name: ws
      protocol: TCP
      port: 11973
      targetPort: 11973
    - name: p2p
      protocol: TCP
      port: 9973
      targetPort: 9973
    - name: miner
      protocol: TCP
      port: 10973
      targetPort: 10973
  type: ClusterIP
