kubernetes/alephium/alephium-ingress.yaml
# This is for exposing the https://alephium.softfork.se website.
# Requires [cert-manager](https://cert-manager.io/docs/) to be installed
# in your k8s cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-softfork-se-ingress
  namespace: alephium
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium.softfork.se
    secretName: alephium-softfork-se-it-tls
  rules:
  - host: alephium.softfork.se
    http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: alephium
            port:
              number: 12973
      - path: /full-node-docs
        pathType: Prefix
        backend:
          service:
            name: alephium
            port:
              number: 12973
      - path: /explorer-backend-docs
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /blocks
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /transactions
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /addresses
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/average-block-times
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /charts/hashrates
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/supply/total-alph
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/supply/circulating-alph
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/total-transactions
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/heights
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explorer-frontend
            port:
              number: 3000
